# XyrisOS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: simulator-tests.yml
boot/: linker.ld
boot-foundation/: CMakeLists.txt  linker.ld
boot-foundation/kernel/: kernel.c
boot/limine/: limine.conf
iso_root/boot/limine/: limine.conf
kernel/: kernel.c
kernel/core/: kernel.c  kernel.h
kernel/cpu/: exceptions.c  exceptions.h  gdt.c  gdt.h  idt.c  idt.h  interrupt.S  isr.c  isr.h
kernel/debug/: panic.c  panic.h
kernel/execution/: execution.c  execution.h  scheduler.c  scheduler.h  thread.c  thread.h
kernel/foundation/: ukom.c
kernel/foundation2/: capability.c  ukom.c
kernel/graphics/: font.c  font.h  framebuffer.c  framebuffer.h  graphics.c  graphics.h
kernel/image/: image.c  image.h  logo.c  logo.h
kernel/include/: compiler.h  types.h
kernel/include/foundation/: capability.h  ukom.h
kernel/logger/: logger.c  logger.h
kernel/memory/: bitmap.c  bitmap.h  heap.c  heap.h  hhdm.c  hhdm.h  memory_map.c  memory_map.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/ui/: ui.c  ui.h
limine-binary/: LICENSE  limine  limine-bios-hdd.h  limine.c
scripts/: build.sh  clean.sh  iso.sh  run.sh  simulator-test.sh
simulator/: CMakeLists.txt  README.md
simulator/docs/: architecture.md  roadmap.md
simulator/include/: cpu.h  display.h  memory.h  simulator.h  system.h
simulator/src/: cpu.c  display.c  main.c  memory.c  simulator.c  system.c
tests/: test_cpu.c  test_memory.c  test_runner.c  test_simulator.c  test_system.c
toolchain/: x86_64-toolchain.cmake
tools/image_converter/: main.cpp
